--- a/rails_postgres_websockets_chat-master/Gemfile
+++ b/rails_postgres_websockets_chat-master/Gemfile
@@ -34,7 +34,7 @@ gem 'sdoc', '~> 0.4.0', group: :doc
 gem 'faye-websocket'
 gem 'puma'
 gem 'pry-rails'
-
+gem 'font-awesome-sass', '~> 4.4.0'
 # Use ActiveModel has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
 
