--- a/notes_nice/Gemfile
+++ b/notes_nice/Gemfile
@@ -27,6 +27,7 @@ gem 'sdoc', '~> 0.4.0', group: :doc
 gem 'bcrypt-ruby'
 gem 'will_paginate'
 gem 'bootstrap-will_paginate'
+gem 'omniauth-steam'
 # Use ActiveModel has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
 
