--- a/notes_nice/Gemfile
+++ b/notes_nice/Gemfile
@@ -28,6 +28,7 @@ gem 'bcrypt-ruby'
 gem 'will_paginate'
 gem 'bootstrap-will_paginate'
 gem 'omniauth-steam'
+gem 'figaro'
 # Use ActiveModel has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
 
